--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -14,13 +14,40 @@ This is the default case.
 ** arrives on LM4857 RIN/LIN
 ** routed on LM4856 to EP+/EP-
 
+===== Internal Codec Route =====
+
+Neo Mode is GSM Handset
+Amp Mode is Call Speaker
+
+* audio path Mic -> GSM
+** MIC2/MIC2N
+** Mic2 Volume
+** ALC Micer Mic2
+** Left PGA
+** Mic Sidetone Mux [Left PGA]
+** Mono Sidetone Volume
+** Mono Mixer Sidetone Playback Switch
+** Mono Volume
+** Mono 2 Mux [Inverted Mono 1]
+
+* audio path GSM -> Speaker
+** RXP/RXN
+** Rx Mixer [RXP - RXN]
+** Line Left Mux [Rx Mix]/Line Right Mux [Rx Mix]
+** Left Mixer Bypass Playback Switch/Right Mixer Bypass Playback Switch
+** Headphone Volume
+
 ===== Driver Status =====
 
 This should be supported by ASoC 0.13rc3 (-moko7 kernel) on.
 
+ASoC 0.13.3 should have same functionality but has renamed the soundcard to neo1973.
+
 ===== asound.state =====
 
 https://people.openmoko.org/laforge/gta01/gta01b_v2/alsa/gsmhandset.state
+
+For ASoC 0.13.3 http://opensource.wolfsonmicro.com/~gg/neo1973/gsmhandset.state
 
 ==== using analog (4pin 2.5mm) headset ====
 
