/* using analog (4pin 2.5mm) headset */

--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -66,9 +66,36 @@ Headset Detection is done via GPIO on S3C2410
 ** arrives on LM4857 RIN/LIN
 ** routed on LM4856 to LHP/RHP
 
+===== Internal Codec Path ======
+
+Neo Mode is GSM Headset
+Amp Mode is Headphones
+
+* audio path Mic -> GSM
+** MIC1
+** Mic Selection Mux [Mic 1]
+** ALC Mixer Mic1
+** Left PGA
+** Mic Sidetone Mux [Left PGA]
+** Mono Sidetone Volume
+** Mono Mixer Sidetone Playback Switch
+** Mono Volume
+** Mono 2 Mux [Inverted Mono 1]
+
+* Audio path GSM -> Headphones
+** RXP/RXN
+** Rx Mixer [RXP - RXN]
+** Line Left Mux [Rx Mix]/Line Right Mux [Rx Mix]
+** Left Mixer Bypass Playback Switch/Right Mixer Bypass Playback Switch
+** Headphone Volume
+
 ===== Driver Status =====
 
-UNKNOWN
+Supported in ASoC 0.13.3
+
+===== State File =====
+
+http://opensource.wolfsonmicro.com/~gg/neo1973/gsmheadset.state
 
 ==== using Bluetooth headset ====
 
