/* Internal Codec Path = */

--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -66,7 +66,7 @@ Headset Detection is done via GPIO on S3C2410
 ** arrives on LM4857 RIN/LIN
 ** routed on LM4856 to LHP/RHP
 
-===== Internal Codec Path ======
+===== Internal Codec Route =====
 
 Neo Mode is GSM Headset
 Amp Mode is Headphones
