--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -93,7 +93,7 @@ Amp Mode is Headphones
 
 Supported in ASoC 0.13.3
 
-===== State File =====
+===== asound.state =====
 
 http://opensource.wolfsonmicro.com/~gg/neo1973/gsmheadset.state
 
@@ -112,9 +112,38 @@ Headset detection via software
 ** wolfson: routes digital signal to PCM
 ** arrives on bluetooth chip via PCM
 
+===== Internal Codec Route =====
+
+Neo Mode is GSM Bluetooth
+Amp Mode is Off
+
+* audio path BT -> GSM
+** Vx DAC
+** Mono Voice Volume
+** Mono Mixer Voice Playback Switch
+** Mono Volume
+** Mono 2 Mux [Inverted Mono 1]
+
+* audio path GSM -> BT
+** RXP/RXN
+** Rx Mixer [RXP - RXN]
+** ALC Mixer Rx
+** Left PGA
+** Capture Mixer Mux [PGA]
+** Capture Left Mixer [Analogue Mix Left]
+** Left ADC
+
 ===== Driver Status =====
 
-UNKNOWN
+Should be support by ASoC 0.13.3
+
+Example of how to setup PCM->BT link.
+
+http://opensource.wolfsonmicro.com/~gg/bluetooth-pcm/bluetooth_pcm.c
+
+===== asound.state =====
+
+http://opensource.wolfsonmicro.com/~gg/neo1973/gsmbluetooth.state
 
 === Multimedia ===
 
