--- a/Neo_1973_audio_subsystem.mw
+++ b/Neo_1973_audio_subsystem.mw
@@ -163,9 +163,13 @@ playback
 
 This is working since ASoC 0.13rc2 (-moko6 kernel)
 
+This should also work on ASoC 0.13.3
+
 ===== asound.state =====
 
 https://people.openmoko.org/laforge/gta01/gta01b_v2/alsa/stereoout.state
+
+For ASoC 0.13.3 http://opensource.wolfsonmicro.com/~gg/neo1973/stereoout.state
 
 ==== sound playback to headphone ====
 
@@ -200,6 +204,7 @@ This is mainly used to record notes
 ===== Driver Status =====
 
 UNKNOWN
+
 === Call recording ===
 
 This is a nice wishlist item.  The user should be able to receive the
