--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -16,6 +16,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
 
 == Research and Reference Information ==
+* [[Shipping Notes]] - Information to help us how to ship phones to you.
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
 
 == Getting started with this wiki ==
