add history, restructure page

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -1,30 +1,62 @@
-== Processor ==
+== Main components ==
+=== Processor ===
 
 Samsung S3C2410A @ 266 MHz
 
-== Flash ==
+=== Flash ===
 
 64MB Samsung NAND flash attached to S3C2410 NAND controller
 
-== RAM ==
+=== RAM ===
 
 128MB SDRAM
 
-== GSM/GPRS ==
+=== GSM/GPRS ===
 
 The GSM/GPRS modem is Texas Instruments Calypso based
 
-== AGPS ==
+=== AGPS ===
 Hammerhead AGPS from Global Locate
 
-== SD-Card ==
+=== SD-Card ===
 
 microSD aka Transflash
 
-== Audio ==
+=== Bluetooth ===
 
-=== Analog wired Headset ===
+=== Audio ===
+
+==== Wolfson Codec ====
+
+==== Analog wired Headset ====
 
 There's a four-ring 2.5mm stereo jack which provides connectivity to old-fashined wired headsets.
 
 The headsets used by Motorola smartphones (A780,A1200, ...) have a compatible configuration
+
+==== Bluetooth Headset ====
+
+This one is wired via PCM bus from the CSR Bluetooth chip to the Wolfson codec.
+
+== History ==
+
+=== GTA01v3 ===
+
+This was the initial hardware revision that was provided to the software team.
+
+=== GTA01v4 ===
+
+This was a slightly improved version of the hardware, though still with a number of serious bugs.
+
+
+=== GTA01Bv2 ===
+
+This was the first hardware that (after applying some post-production hotfixes) worked completely.
+
+=== GTA01Bv3 ===
+
+This is the hardware revision that we ship during Phase-0.
+
+=== GTA01Bv4 ===
+
+This is the hardware revision that we ship in Phase-1
