--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -1,3 +1,5 @@
+[[Image:Gta01b v3 top.jpg|thumb|400px|display (top) side]]
+[[Image:Gta01b v3 bottom.jpg|thumb|400px|component (back) side]]
 == Main components ==
 === Processor ===
 
