--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -1,4 +1,3 @@
-
 Architecture of the second version of the Neo1973 debug board:
 [[Image:Debugboard v2 concept.jpg]]
 
@@ -44,6 +43,9 @@ As it turns out, we can even use the second port of the FT2232 simultaneously wi
 
 The serial port needs a tri-state driver, since it is both connected to the GSM modem AND to the debug board.  We drive the tri-state driver by an inverted GSM_EN signal (pin 7 on FPC connector).
 
+== Usage Instructions ==
+
+We currently only have a photo story for the old Debug board: [[Connecting_GTA01Bv2_with_Debug_Board]]
 
 == History ==
 
