*Empty MediaWiki Message*

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,6 +1,6 @@
 Press coverage about OpenMoko / Neo1973 :
 
-== Press coverage of November 2006 Amsterdam reelase ==
+== Press coverage of November 2006 Amsterdam release ==
 
 * http://www.linuxdevices.com/news/NS2986976174.html
 * http://www.linuxdevices.com/news/NS7056478804.html
