--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -121,14 +121,88 @@ The idea is to use JTAG to download and execute a special version of u-boot.  Th
 
 # make sure NAND flash is completely erased
 # use JTAG to reset and halt the device
+<pre>
+> reset halt
+target halted in ARM state due to debug request, current mode: Supervisor
+cpsr: 0x400000d3 pc: 0x00000000
+MMU: disabled, D-Cache: disabled, I-Cache: disabled
+</pre>
+
 # use JTAG to download lowlevel bootup code to address 0
+<pre>
+> load_binary /space/misc/gta01/u-boot.git/foo.bin 0            
+downloaded 332 byte in 0s 21899us
+</pre>
+
 # use JTAG to create breakpoint at 0x33f80000
+<pre>
+> bp 0x33f80000 4 hw
+breakpoint added at address 0x33f80000
+</pre>
+
 # use JTAG to run up to that breakpoint
+<pre>
+> resume
+Target 0 resumed
+> Target 0 halted
+target halted in ARM state due to breakpoint, current mode: Supervisor
+cpsr: 0x600000d3 pc: 0x33f80000
+MMU: disabled, D-Cache: disabled, I-Cache: enabled
+</pre>
+
 # use JTAG to download u-boot-ram image to 0x33f80000
+<pre>
+> load_binary /space/misc/gta01/u-boot.git/u-boot.bin 0x33f80000
+downloaded 135692 byte in 6s 567264us
+</pre>
+
 # use JTAG to resume at 0x33f80000
+<pre>
+> resume
+Target 0 resumed
+</pre>
+
+At this point, the display backlight gets bright and we see the following familiar prompt on the serial console:
+<pre>
+U-Boot 1.1.6 (Jan 13 2007 - 23:44:23)
+
+DRAM:  128 MB
+NAND:
+</pre>
+
 # wait until u-boot has created BBT
+<pre>
+64 MiB
+*** Warning - bad CRC or NAND, using default environment
+
+In:    serial
+Out:   serial
+Err:   serial
+Hit any key to stop autoboot:  0 
+GTA01Bv2 # 
+</pre>
+
 # execute 'dynpart' command to calculate partition offsets
+<pre>
+GTA01Bv2 # dynpart
+mtdparts mtdparts=gta01-0:0x00030000(u-boot),0x00004000(u-boot env),0x00208000(kernel),0x00400000(initrd),0x039c4000(rootfs)
+</pre>
+
 # execute 'dynenv set' command to write environment partition offset to OOB of block 0
+{{note|you MUST use the size of the u-boot partition from the output of 'dynpart' (the number that preceeds the '''(u-boot)'''string)}}
+<pre>
+GTA01Bv2 # dynenv set 0x30000
+...
+GTA01Bv2 #
+</pre>
+
+# execute 'saveenv' command to write environment into its partition
+<pew>
+GTA01Bv2 # saveenv
+Saving Environment to NAND...
+Erasing Nand...Writing to Nand... done
+</pre>
+
 # use JTAG (or microSD) to read uboot-nand image into RAM
 # use u-boot 'write.e' command to write uboot-nand image to uboot partition in NAND
 # use JTAG (or microSD) to read kernel uImage into RAM
