/* JTAG / OpenOCD / u-boot RAM based */

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -152,7 +152,7 @@ MMU: disabled, D-Cache: disabled, I-Cache: enabled
 
 # use JTAG to download u-boot-ram image to 0x33f80000
 <pre>
-> load_binary /space/misc/gta01/u-boot.git/u-boot.bin 0x33f80000
+> load_binary /space/misc/gta01/u-boot.git/u-boot.bin.ram 0x33f80000
 downloaded 135692 byte in 6s 567264us
 </pre>
 
