/* JTAG / OpenOCD / u-boot RAM based */

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -192,12 +192,12 @@ mtdparts mtdparts=gta01-0:0x00030000(u-boot),0x00004000(u-boot env),0x00208000(k
 {{note|you MUST use the size of the u-boot partition from the output of 'dynpart' (the number that preceeds the '''(u-boot)'''string)}}
 <pre>
 GTA01Bv2 # dynenv set 0x30000
-...
+45 4e 56 30 - 00 00 03 00
 GTA01Bv2 #
 </pre>
 
 # execute 'saveenv' command to write environment into its partition
-<pew>
+<pre>
 GTA01Bv2 # saveenv
 Saving Environment to NAND...
 Erasing Nand...Writing to Nand... done
