--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -3,6 +3,17 @@ GPS(Global Positioning System)
 
 == AGPS ==
 
-== PMB 2520 ==
+== PMB 2520 Hammerhead ==
+The PMB 2520 Hammerhead is a IC sulution for GPS that producted by the Infineon Technologies. It allows the usage of assistance data by surpporting A-GPS standards.
+
+=== Modules of the Hammerhead ===
+
+The Hammerhead consists of the following modules:
+*RF front-end with on-chip, high gain and low noise, LNA, I/Q mixers, on-chip polyphase complex IF filter, digitally controlled AGC, and 3-bits ADC for the I and Q paths.
+*Sigma-Delta RF PLL with on-chip PCO and on-chip loop filter.
+*Embedded PLL and NCO for baseband clock generation.
+*Multiple channels digital mixers and parallel correlator engines to enable real time correlation of the PRN code for up to 14 satellites.
+*Post processor including peak detection logic
+*SRAM for storing correlation results
 
 == GPS on GTA01 ==
