--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -16,4 +16,13 @@ The Hammerhead consists of the following modules:
 *Post processor including peak detection logic
 *SRAM for storing correlation results
 
+=== Host Interface ===
+
+The Hammerhead integrates 3 serial interfaces:
+*UART
+*I2C
+*SPI
+
+The UART in the Hammerhead is a full-duplex UART interface. It is fixed in 8N1(8 data bits, no parity, 1 stop bit) mode. On the GTA01, the host processor connect with the Hammerhead through the UART.
+
 == GPS on GTA01 ==
