--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -25,4 +25,23 @@ The Hammerhead integrates 3 serial interfaces:
 
 The UART in the Hammerhead is a full-duplex UART interface. It is fixed in 8N1(8 data bits, no parity, 1 stop bit) mode. On the GTA01, the host processor connect with the Hammerhead through the UART.
 
+=== Host software Architecture ===
+
+The Hammerhead driver software is delivered as a library. The library has two seperate interfaces for the software. One part of them provides an interface to communicate with the high level software. The other part is the HAL(Hardware Abstraction Layer), it is used to communicate with the system.
+
+The library provides the following infomations to the high level software:
+*Position data
+*Library status
+The high level software sends the following messages to the library:
+*Assistance data
+*Positioning Commands
+*Configuration Commands
+*Time-out and Packet Available
+
+The library communicates with the system at the following part:
+*Communications Drivers
+*System Timer
+*NV storage
+*Log buffer
+
 == GPS on GTA01 ==
