/* GPS on GTA01 */

--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -45,3 +45,9 @@ The library communicates with the system at the following part:
 *Log buffer
 
 == GPS on GTA01 ==
+
+At the GTA01, the host processor is a SC2410..
+
+=== Hammerhead on the GTA01 ===
+
+On the GTA01, the Hammerhead are configured that connected with the host processor through the UART. The UART of data output/input is connected to the UART 1 of the SC2410. The UART of the hardware flow control is connected to the UART 2 of the SC2410.
