--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -1,5 +1,18 @@
-== GPS ==
-GPS(Global Positioning System)
+== What is GPS ==
+
+The Global Positioning System (GPS) is a worldwide radio-navigation system formed from a constellation of 24 satellites and their ground stations. 
+
+GPS uses these "man-made stars" as reference points to calculate positions accurate to a matter of meters. In fact, with advanced forms of GPS you can make measurements to better than a centimeter! 
+
+In a sense it's like giving every square meter on the planet a unique address. 
+
+GPS receivers have been miniaturized to just a few integrated circuits and so are becoming very economical. And that makes the technology accessible to virtually everyone. 
+
+These days GPS is finding its way into cars, boats, planes, construction equipment, movie making gear, farm machinery, even laptop computers. 
+
+Soon GPS will become almost as basic as the telephone. Indeed, at Trimble, we think it just may become a universal utility. 
+
+(from the GPS Tutorial)
 
 == AGPS ==
 
