--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -12,7 +12,7 @@ These days GPS is finding its way into cars, boats, planes, construction equipme
 
 Soon GPS will become almost as basic as the telephone. Indeed, at Trimble, we think it just may become a universal utility. 
 
-(from the [[GPS Tutorial|http://www.trimble.com/gps/index.shtml]])
+(from the [http://www.trimble.com/gps/index.shtml GPS Tutorial])
 
 == AGPS ==
 
