--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -14,6 +14,8 @@ Soon GPS will become almost as basic as the telephone. Indeed, at Trimble, we th
 
 (from the [http://www.trimble.com/gps/index.shtml GPS Tutorial])
 
+(Another helpful overview [http://www.colorado.edu/geography/gcraft/notes/gps/gps_f.html Global Positioning System Overview])
+
 == AGPS ==
 
 == PMB 2520 Hammerhead ==
