--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -19,7 +19,9 @@ Soon GPS will become almost as basic as the telephone. Indeed, at Trimble, we th
 == AGPS ==
 
 == PMB 2520 Hammerhead ==
-The PMB 2520 Hammerhead is a IC sulution for GPS that producted by the Infineon Technologies. It allows the usage of assistance data by surpporting A-GPS standards.
+The PMB 2520 Hammerhead is a IC sulution for GPS that producted by the Infineon Technologies. It allows the usage of assistance data by surpporting A-GPS standards. 
+
+(all infomations are getted from the datasheet of PMB 2520)
 
 === Modules of the Hammerhead ===
 
