/* Powering up the GSM Modem */

--- a/Manually_using_GSM.mw
+++ b/Manually_using_GSM.mw
@@ -25,7 +25,7 @@ This is a short guide how to manually get GSM going.
  root@fic-gta01:~$ echo "1" > /sys/bus/platform/devices/gta01-pm-gsm.0/power_on
 * access the GSM Modem UART
 <pre>
-root@fic-gta01:~$ cu -l /dev/ttySAC
+root@fic-gta01:~$ cu -l /dev/ttySAC0
 Connected.
 AT-Command Interpreter Ready
 OK
