--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -1,30 +1,9 @@
-== Mailing lists ==
 
-=== Internal Mailing Lists ===
+== Public Resources ==
 
-Those are for FIC / OpenMoko employees and external partners/contractors/cunsultants only.
+All resources listed here are available to the general public.  Everyone is invited to participate.
 
-==== coreteam@lists.internal.openmoko.org ====
-
-Product Management and Consulting only, for strategic discussions. Better known under its alias <b>coreteam@openmoko.org</b>
-
-==== neo1973-devel@lists.internal.openmoko.org ====
-
-This is the main internal development list about anything regarding the Neo1973 hardware, the software development for it, etc.
-
-https://lists.internal.openmoko.org/mailman/listinfo/neo1973-devel
-
-==== devel@lists.internal.openmoko.org ====
-
-Old developer list, became an alias for neo1973-devel.
-
-==== buglog@lists.internal.openmoko.org ====
-
-A read-only list where every status update to a hardware bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
-
-https://lists.internal.openmoko.org/mailman/listinfo/buglog
-
-=== Public Mailing Lists ===
+=== Mailing Lists ===
 
 There are a number of development related mailinglsts at http://lists.openmoko.org/
 
@@ -64,25 +43,19 @@ This is a (soon completely public) mailinglist on the OpenMoko Distribution.  He
 
 http://lists.openmoko.org/mailman/listinfo/distro-devel
 
-== Wiki ==
+=== Wiki ===
 
 This Wiki is our public wiki, http://wiki.openmoko.org/. You're already in it, if you're reading this.
 
-There is another wiki which which is for internal use only at https://wiki.internal.openmoko.org/
-
-== Bugzilla ==
+=== Bugzilla ===
 
 Our bug tracking system for software issues (which will become public at product release time) is available at http://bugzilla.openmoko.org/
 
-Our internal bug tracking system, mainly for hardware issues, is available at http://bugzilla.internal.openmoko.org/
-
-== IRC ==
+=== IRC ===
 
 There's a #openmoko channel on irc.freenode.net.
+=== SVN ===
 
-There's also a #openmoko-devel channel, which is for OpenMoko internal developers only, sorry.
-
-== SVN ==
 There is a [http://subversion.tigris.org/ Subversion] server available at svn.openmoko.org. 
 
 Read-only access is provided via https://svn.openmoko.org/. You should not normally use this URL, it's mainly for later public access after product release.
@@ -127,3 +100,47 @@ The Subversion (svn) tree is laid out as follows:
 **** ...
 *** target
 **** ...
+== Internal resources ==
+
+There are some resources which are internal.  This means that they are only available for internal developers of FIC / Openmoko Inc.   The reason they are internal is either because they deal with information under NDA, or about business strategy.  We kindly ask for your understanding that while we really try to be as open as possible, there are some topics which we have to discuss without public
+participation.
+
+Nontheless, contrary to traditional security beliefs, we'll outline here what those resources are.
+
+=== Mailing Lists ===
+
+Those are for FIC / OpenMoko employees and external partners/contractors/cunsultants only.
+
+==== coreteam@lists.internal.openmoko.org ====
+
+Product Management and Consulting only, for strategic discussions. Better known under its alias <b>coreteam@openmoko.org</b>
+
+==== neo1973-devel@lists.internal.openmoko.org ====
+
+This is the main internal development list about anything regarding the Neo1973 hardware, the software development for it, etc.
+
+https://lists.internal.openmoko.org/mailman/listinfo/neo1973-devel
+
+==== devel@lists.internal.openmoko.org ====
+
+Old developer list, became an alias for neo1973-devel.
+
+==== buglog@lists.internal.openmoko.org ====
+
+A read-only list where every status update to a hardware bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
+
+https://lists.internal.openmoko.org/mailman/listinfo/buglog
+
+=== Wiki ===
+
+There is another wiki which which is for internal use only at https://wiki.internal.openmoko.org/
+
+=== Bugzilla ===
+
+Our internal bug tracking system, mainly for hardware issues, is available at http://bugzilla.internal.openmoko.org/
+
+=== IRC ===
+
+There's a #openmoko channel on irc.freenode.net.
+
+There's also a #openmoko-devel channel, which is for OpenMoko internal developers only, sorry.
