--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -121,6 +121,10 @@ This is the main internal development list about anything regarding the Neo1973 
 
 https://lists.internal.openmoko.org/mailman/listinfo/neo1973-devel
 
+==== neo1973-debugboard@lists.internal.openmoko.org ====
+
+This mailinglist is about the DebugBoard v2 hardware design/development.
+
 ==== devel@lists.internal.openmoko.org ====
 
 Old developer list, became an alias for neo1973-devel.
@@ -130,6 +134,10 @@ Old developer list, became an alias for neo1973-devel.
 A read-only list where every status update to a hardware bug (bugzilla entry) will get posted.  Nice to keep updated on the bug squashing progress
 
 https://lists.internal.openmoko.org/mailman/listinfo/buglog
+
+==== sysadmin@lists.internal.openmoko.org ====
+
+This is about system administration.
 
 === Wiki ===
 
