*Empty MediaWiki Message*

--- a/Sjf2410-linux.mw
+++ b/Sjf2410-linux.mw
@@ -1,4 +1,3 @@
-
 == General ==
 sjf2410-linux is a linux-enabled version of the sjf2410 tool.  
 
@@ -6,11 +5,11 @@ It allows you to use a [[wiggler]] compatible JTAG Probe to program NAND and NOR
 
 You can use this as one method to un-brick your [[Neo1973]], in case your bootloader has been corrupted.
 
-== Source Code ==
+== Object Code ==
 The latest release can be found at https://buildhost.openmoko.org/tmp/gta01/deploy/images/sjf2410
 
-== Object Code ==
-The current sources are kept in https://svn.gta01.hmw-consulting.de/trunk/src/host/sjf2410-linux/
+== Source Code ==
+The current sources are kept in https://svn.openmoko.org/trunk/src/host/sjf2410-linux/
 
 == Usage ==
 
@@ -20,7 +19,7 @@ basically you have to start the program with option '-f' to specify the file you
 
 Then, verify that it actually detects the S3C2419 CPU.
 
-In the Main Menu, sleect '0' for 'K9S1208 prog'. In the prog menu, select '0' for 'K9S1208 Program' and then '0' as the block number.
+In the Main Menu, select '0' for 'K9S1208 prog'. In the prog menu, select '0' for 'K9S1208 Program' and then '0' as the block number.
 
 ==== Example ====
 <pre>
