--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -12,7 +12,38 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 ** [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
 *** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
 ** [[Debug Board]] -- The debug board for Neo1973 hardware.
-* [[Software]] - GTA01 software-related (developer) documentation
+=== Software ===
+
+==== Tools on the host PC ====
+* [[sjf2410-linux]]
+* [[s3c2410_boot_usb]]
+* [[Toolchain]]
+* [[OpenOCD]]
+
+==== For the target platform ====
+* [[u-boot]]
+* [[Kernel]]
+* Userspace
+** [[gsmd]]
+** [[agpsd]]
+** [[OpenMoko]] distribution
+*** [[OpenMoko2007]] is our first release
+*** [[Userspace root image]]
+
+==== User Interface Related ====
+* [[Look & Feel]]
+* [[Applications]]
+* [[Widgets]]
+
+==== Development Related ====
+* [[Templates]]
+* [[PIM Storage]]
+* [[Coding Guidelines]]
+* [[Widget Inheritance Graph]]
+* [[How to run OpenMoko Apps on PC]]
+* [[OpenMoko#Setting_up_an_OpenMoko_SDK]]
+
+== TODO ==
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
 
 == Research and Reference Information ==
