--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -2,46 +2,51 @@
 
 This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+AGPS Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
 
-== Development ==
-* [[Development resources]] - Describes the resources (lists, svn, ...)
 
 == Documentation ==
 
 * [[Documentation]] - End-user related documentation
-* [[Hardware]] - Hardware-related (developer) documentation
-** [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
-*** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
-** [[Debug Board]] -- The debug board for Neo1973 hardware.
-=== Software ===
 
-==== Tools on the host PC ====
+== [[Hardware]] ==
+
+* [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
+*** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
+* [[Debug Board]] -- The debug board for Neo1973 hardware
+
+== Software ==
+
+=== Tools on the host PC ===
 * [[sjf2410-linux]]
 * [[s3c2410_boot_usb]]
 * [[Toolchain]]
 * [[OpenOCD]]
 
-==== For the target platform ====
-* [[u-boot]]
-* [[Kernel]]
+=== For the target platform ===
+* Low-level
+** [[u-boot]] - The bootloader that we use
+** [[Kernel]] - The Linux Kernel of the Neo1973
 * Userspace
-** [[gsmd]]
-** [[agpsd]]
+** [[gsmd]] - The gsm daemon talking to the GSM Modem
+** [[agpsd]] - The gps daemon talking to the GPS Unit
 ** [[OpenMoko]] distribution
 *** [[OpenMoko2007]] is our first release
 *** [[Userspace root image]]
 
-==== User Interface Related ====
+=== User Interface Related ===
 * [[Look & Feel]]
 * [[Applications]]
 * [[Widgets]]
 
-==== Development Related ====
+=== Development Related ===
 * [[Templates]]
 * [[PIM Storage]]
 * [[Coding Guidelines]]
 * [[Widget Inheritance Graph]]
 * [[How to run OpenMoko Apps on PC]]
 * [[OpenMoko#Setting_up_an_OpenMoko_SDK]]
+
+== Development ==
+* [[Development resources]] - Describes the resources (lists, svn, ...)
 
 == TODO ==
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
