--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -10,8 +10,10 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 == [[Hardware]] ==
 
 * [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
-*** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
+** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
 * [[Debug Board]] -- The debug board for Neo1973 hardware
+** [[Connecting_GTA01Bv2_with_Debug_Board]]
+** [[Debug Board v1]] - The previous version of the Debug Board
 
 == Software ==
 
