--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -3,7 +3,11 @@
 == Main components ==
 === Processor ===
 
-Samsung S3C2410A @ 266 MHz
+The main Processor (CPU) of the Neo1973 is a Samsung S3C2410A-266 (Capable of running up to 266 MHz)
+
+* Product Homepage: http://www.samsung.com/products/semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/S3C2410/S3C2410.htm
+* User Manual: http://www.samsung.com/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/S3C2410/2410UserManual.pdf
+* BSDL File: http://www.samsung.com/Products/Semiconductor/MobileSoC/ApplicationProcessor/ARM9Series/S3C2410/S3C2410_BGA_BSDLJTAGFILE.bsd
 
 === Flash ===
 
