--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -11,7 +11,10 @@ The main Processor (CPU) of the Neo1973 is a Samsung S3C2410A-266 (Capable of ru
 
 === Flash ===
 
-64MB Samsung NAND flash attached to S3C2410 NAND controller
+64MB Samsung NAND flash (K9F1208U0B) attached to S3C2410 NAND controller.
+
+* Product Homepage: http://www.samsung.com/products/semiconductor/NANDFlash/SLC_SmallBlock/512Mbit/K9F1208U0B/K9F1208U0B.htm
+* Data Sheet: http://www.samsung.com/Products/Semiconductor/NANDFlash/SLC_SmallBlock/512Mbit/K9F1208U0B/ds_k9f1208x0b_rev03.pdf
 
 === RAM ===
 
