--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -18,7 +18,9 @@ The main Processor (CPU) of the Neo1973 is a Samsung S3C2410A-266 (Capable of ru
 
 === RAM ===
 
-128MB SDRAM
+128MB SDRAM (2x Samsung K4M511633C) attached to S3C2410 SDRAM controller
+* Product Homepage: http://www.samsung.com/Products/Semiconductor/MobileSDRAM/MobileSDRSDRAM/512Mbit/K4M511633C/K4M511633C.htm
+* Data Sheet: http://www.samsung.com/Products/Semiconductor/MobileSDRAM/MobileSDRSDRAM/512Mbit/K4M511633C/ds_k4m511633c.pdf
 
 === GSM/GPRS ===
 
