--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -24,7 +24,19 @@ The main Processor (CPU) of the Neo1973 is a Samsung S3C2410A-266 (Capable of ru
 
 === GSM/GPRS ===
 
-The GSM/GPRS modem is Texas Instruments Calypso based
+The GSM/GPRS modem is Texas Instruments Calypso based.
+
+==== CALYPSO digital baseband ====
+
+Unfortunately we cannot provide many details on the GSM chipset due to very tight NDA's.  However, this is not neccessarily required, since it interfaces using a standard UART serial line with the S3C2410.  On that interface, GSM 07.05, 07.10 and other standardized protocols are used.
+
+==== TWL3014 analog baseband ====
+
+Product Homepage: http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12295&contentId=4703
+
+==== TRF6151 RF Transceiver ====
+
+Product Homepage: http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12296&contentId=4701
 
 === AGPS ===
 Hammerhead AGPS from Global Locate
