--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -80,6 +80,7 @@ The Neo1973 has one MicroSD aka Transflash slot.
 === Vibrator ===
 
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-vibrator.patch
+* Connected to: S3C2410 GPIO
 
 === USB Device ===
 
