--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -69,6 +69,8 @@ The Neo1973 has one MicroSD aka Transflash slot.
 
 === LCD Display Module (LCM) ===
 
+This is a 2.8" 480x640 toppoly (tpo) TD028TTEC1 module, using a Toshiba JBT6K74 TFT LCD Driver Chipset.
+* Homepage: http://www.tpo.biz/ENG/business-eng/Activer-Matrix-VGA.htm
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-jbt6k74.patch
 
 === Bluetooth ===
