more data sheets

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -51,6 +51,7 @@ Product Homepage: http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?t
 === AGPS ===
 Hammerhead AGPS from Global Locate.
 
+* Product Homepage: http://www.globallocate.com/SEMICONDUCTORS/SEMI_HAMMER_Frameset.htm
 * Connected to: S3C2410 UART2 (full-uart, RxD, TxD, CTS, RTS) /dev/ttySAC1 in userspace
 * Driver: Implemented as userspace agps daemon (agpsd)
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
@@ -62,27 +63,38 @@ The Neo1973 has one MicroSD aka Transflash slot.
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c_mci.patch
 * Backlight Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-backlight.patch
 
-=== Touch Screen ===
-
-* Connected to: S3C2410 TS controller
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/qt2410-touchscreen.patch* Backlight Driver: 
 
 === LCD Display Module (LCM) ===
 
 This is a 2.8" 480x640 toppoly (tpo) TD028TTEC1 module, using a Toshiba JBT6K74 TFT LCD Driver Chipset.
 * Homepage: http://www.tpo.biz/ENG/business-eng/Activer-Matrix-VGA.htm
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-jbt6k74.patch
+* Connected to: S3C2410 Display Controller
+
+==== Touch Screen ====
+
+* Connected to: S3C2410 TS controller
+* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/qt2410-touchscreen.patch* Backlight Driver: 
 
 === Bluetooth ===
 
+Delta DFBM-CS320 Class2 Module, using CSR BlueCore4
+
+* Data Sheet: http://www.delta.com.tw/product/cp/vco/BT/download/pdf/CS/2.DFBM-CS320.pdf
+* CSR Data Sheet: http://www.csrsupport.com/download/2302/CS-101564-DSP10%20BlueCore4-ROM%20Product%20Data%20Sheet.pdf
 * Driver: Stock Linux Kernel BlueZ
-* Connects to: S3C2410 USB Host controller (OHCI)
+* Connected to: S3C2410 USB Host controller (OHCI)
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
 
 === Vibrator ===
 
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-vibrator.patch
 * Connected to: S3C2410 GPIO
+
+=== USB Host ===
+
+The USB Host controller is inside the S3C2410
+* Driver: Stock Linux kernel ohci_hcd
 
 === USB Device ===
 
@@ -94,6 +106,8 @@ The USB Device controller is inside the S3C2410
 ==== Wolfson Codec ====
 
 There's a WM8573 Wolfson Microelectronics Codec.
+* Product Homepage: http://www.wolfsonmicro.com/products/WM8753/
+* Data Sheet: http://www.wolfsonmicro.com/uploads/documents/en/WM8753.pdf
 * Connected to: S3C2410 IIS interface
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/asoc.patch
 
