--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -7,7 +7,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 * [[Documentation]] - End-user related documentation
 
-== [[Hardware]] ==
+== Hardware ==
 
 * [[Neo1973 Hardware]] - The first FIC phone with OpenMoko
 ** [[Disassembling Neo1973]] - A photo story about disassembling the hardware
