--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -1,3 +1,6 @@
+{|align=right
+  |__TOC__
+  |}
 <big>'''Welcome to the OpenMoko public Wiki'''</big>
 
 This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+AGPS Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
