/* high-level requirements */

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -120,7 +120,7 @@ The <b>power_sequence</b> file implements power-up/power-down sequence in accord
 
 ==== high-level requirements ====
 
-The GTA01 audio subsystem is fairly simple, therefore the high-level requirements for the sound driver are simple, too.
+The GTA01 audio subsystem is fairly complex, even though the high-level requirements for the sound driver are simple.
 The features we need to support
 
 * voice call support
@@ -139,6 +139,8 @@ The features we need to support
 ** an audio player can play back mp3/ogg/flac/... files and output sound via integrated speakers or headphone
 * headphone jack switch
 ** this is connected to a GPIO of the S3C2410. How to best integrate this with the sound driver? It should just be handled like any other headphone jack reporting of e.g. laptop computers.
+
+For more details see [[Neo1973 Audio Subsystem]]
 
 ==== implementation ====
 
