--- a/Kernel.mw
+++ b/Kernel.mw
@@ -306,38 +306,27 @@ root@fic-gta01:~$ cat /sys/bus/i2c/devices/0-0008/battemp
 == Kernel TODO ==
 
 === Various ===
-* use bigger font as default
 * speed up in-kernel boot process
 ** delay calibration
-** sd-card driver as module
 ** framebuffer takes ages
-* check GPIO initialization with regard to [[GTA01v4]] changes
 
 ===  TS07.10 multiplex ===
 
 === PCF50606 ===
 * fix conversion problems when setting alarm time/date
-* add conversion chart for temperature, once battery type NTC data sheet is known
-** who is supposed to have that datasheet?
-* add some intelligent shutdown handler when POWER key is pressed for more then 3/5 seconds (input device KEY_POWER?)
-* test battery charging
+* check conversion table for temperature
 * implement 'persistent alarm setting' (see mail from mickey)
 
 === backlight ===
-* rather than only on/off support, use PWM for backlight levels
 * later: implement smooth fade-in, fade-out
 
 === vibrator ===
 * implement it as LED driver
-* test it once prototype with case is available
+* test it
 * later: implement PWM
 
 === USB device driver ===
-* make sure usb-net works stable with [[GTA01v4]]
 * test switching between usb host and usb device
-
-=== Sound ===
-* waiting for S3C2410 host asoc support by Wolfson
 
 === Power Management ===
 * test, debug and fix suspend on user request
@@ -348,24 +337,3 @@ root@fic-gta01:~$ cat /sys/bus/i2c/devices/0-0008/battemp
 ** IRQ from ADC/touchscreen
 ** 911 button press (GPIO IRQ)
 ** headphone jack insert/remove
-
-=== GPIO access ===
-
-The following GPIO's need to be accessed from userspace:
-
-==== GTA01v4 ====
-* GPS_PWRON
-** allows us to power-up the GPS
-* MODEM_RST
-** resetting the GSM Modem
-* MODEM_ON
-** switching GSM Modem on
-* 911_KEY
-** needs to be an input device with a single key
-* DLGSM
-** switch headphone port to GSM UART mode?
-* JACK_INSERT
-** headphone jack insertion, reported via input device
-
-==== GTA01Bv2 ====
-* GSM_EN ?
