--- a/Kernel.mw
+++ b/Kernel.mw
@@ -19,7 +19,7 @@ Some additional patches are required for
 
 == Kernel Patchset ==
 
-The latest patchset against the abovementioned vanilla kernel can be found at [http://people.gta01.hmw-consulting.de/laforge/src/kernel/current/]. This is a so-called "[http://savannah.nongnu.org/projects/quilt quilt] patchset".  In order to apply it, you have to untar it into a "patches" directory below the "linux-2.6.x" directory, and then call "quilt push -a", which pushes all patches onto the kernel.
+The latest patchset against the abovementioned vanilla kernel can be found at https://svn.openmoko.org/trunk/src/target/kernel/patches/. This is a so-called "[http://savannah.nongnu.org/projects/quilt quilt] patchset".  In order to apply it, you have to untar it into a "patches" directory below the "linux-2.6.x" directory, and then call "quilt push -a", which pushes all patches onto the kernel.
 
 == Kernel Configuration ==
 
