--- a/Kernel.mw
+++ b/Kernel.mw
@@ -23,7 +23,7 @@ The latest patchset against the abovementioned vanilla kernel can be found at ht
 
 == Kernel Configuration ==
 
-The latest kernel configuration can be found at [http://people.gta01.hmw-consulting.de/laforge/src/kernel/current/].  Just copy it to the linux-2.6.x/.config file.
+The latest kernel configuration can be found at https://svn.openmoko.org/trunk/oe/packages/linux/linux-gta01/defconfig-fic-gta01.  Just copy it to the linux-2.6.x/.config file.
 
 == Kernel building ==
 
