/* Bootloader source code */

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -15,10 +15,9 @@ However, the vanilla u-boot doesn't support many of the features that GTA01 need
 
 == Bootloader source code ==
 
-The current bootloader source code can be found at [http://people.openmoko.org/laforge/src/u-boot/current ]. You will need the original tar.bz2 archive as well as the u-boot-qt2410.patch.
+The current bootloader patches can be found at https://svn.openmoko.org/trunk/src/target/u-boot/patches/. 
 
-Untar the sources, apply the patch.  run "make qt2410_config", run "make".  You will get a resulting "u-boot.bin" image, which you can directly flash (either using existing bootloader or [[sjf2410-linux]]) into NAND.
-
+Untar the sources, apply the patch.  run "make gta01bv3_config" (or gta01bv2_config, or whatever hardware revision you have), run "make".  You will get a resulting "u-boot.bin" image, which you can directly flash (either using existing bootloader or [[sjf2410-linux]]) into NAND.
 
 == Bootloader binary ==
 
